# actix_web_template

./: Cargo.toml  README.md
migrations/2023-06-05-00001_create_users/: up.sql
src/: db.rs  handlers.rs  main.rs  models.rs
